# fastapi-starter-template

./: README.md  example_module.py  pyproject.toml
app/: example_module.py
app/api/endpoints/: hello.py
app/core/: calculations.py
app/data/: property_data.py
tests/core/: calculations_test.py
