[tool.poetry]
name = "fastapi-starter-template"
version = "0.1.0"
description = ""
authors = ["Zidane Wright <zidanewright@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
requests = "^2.24.0"
pytest = "^8.0.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
